[gd_scene load_steps=7 format=3 uid="uid://bne6iffkh1vr7"]

[ext_resource type="Script" path="res://Objects/Battle/BattleTransition2.gd" id="1"]

[sub_resource type="Animation" id="1"]
resource_name = "In"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, -100), Vector2(15, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Middle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-500, 150), Vector2(-12, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bottom:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, -150), Vector2(10, -4)]
}

[sub_resource type="Animation" id="4"]
resource_name = "Load"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(15, -3), Vector2(-15, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Middle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-12, 3), Vector2(10, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bottom:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, -4), Vector2(-15, 4)]
}

[sub_resource type="Animation" id="2"]
resource_name = "Out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-15, 3), Vector2(-500, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Middle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, -3), Vector2(500, -150)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bottom:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-15, 4), Vector2(-500, 150)]
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Middle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bottom:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qeiys"]
_data = {
"In": SubResource("1"),
"Load": SubResource("4"),
"Out": SubResource("2"),
"RESET": SubResource("3")
}

[node name="BattleTransition2" type="CanvasLayer"]
layer = 5
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qeiys")
}

[node name="Top" type="Node2D" parent="."]

[node name="Polygon2D2" type="Polygon2D" parent="Top"]
color = Color(0, 0, 0, 1)
antialiased = true
polygon = PackedVector2Array(-21, -20, 493, -8, 493, 28, -17, 127)

[node name="VardellEyes" type="Node2D" parent="Top"]
visible = false

[node name="Eye1" type="Polygon2D" parent="Top/VardellEyes"]
color = Color(0.2, 0.729412, 0.12549, 1)
antialiased = true
polygon = PackedVector2Array(47, 26, 92, 22, 98, 50, 56, 60)

[node name="Eye2" type="Polygon2D" parent="Top/VardellEyes"]
position = Vector2(67, -10)
color = Color(0.2, 0.729412, 0.12549, 1)
antialiased = true
polygon = PackedVector2Array(47, 26, 92, 22, 98, 50, 56, 60)

[node name="Middle" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Middle"]
position = Vector2(0, 27)
color = Color(0, 0, 0, 1)
antialiased = true
polygon = PackedVector2Array(-9, 258, -18, 98, 494, -1, 499, 61)

[node name="YouEyes" type="Node2D" parent="Middle"]
visible = false

[node name="Eye1" type="Polygon2D" parent="Middle/YouEyes"]
color = Color(0, 0.27451, 1, 1)
antialiased = true
polygon = PackedVector2Array(183, 130, 219, 123, 224, 145, 188, 156)

[node name="Eye2" type="Polygon2D" parent="Middle/YouEyes"]
position = Vector2(52, -12)
color = Color(0, 0.27451, 1, 1)
antialiased = true
polygon = PackedVector2Array(183, 130, 219, 123, 224, 145, 188, 156)

[node name="Bottom" type="Node2D" parent="."]

[node name="Polygon2D3" type="Polygon2D" parent="Bottom"]
color = Color(0, 0, 0, 1)
antialiased = true
polygon = PackedVector2Array(497, 282, 498, 86, -8, 283)

[node name="ShylenEyes" type="Node2D" parent="Bottom"]
visible = false

[node name="Eye1" type="Polygon2D" parent="Bottom/ShylenEyes"]
color = Color(0.866667, 0.439216, 0.0627451, 1)
antialiased = true
polygon = PackedVector2Array(317, 248, 316, 208, 362, 207, 365, 244)

[node name="Eye2" type="Polygon2D" parent="Bottom/ShylenEyes"]
position = Vector2(63, -5)
color = Color(0.866667, 0.439216, 0.0627451, 1)
antialiased = true
polygon = PackedVector2Array(317, 248, 316, 208, 362, 207, 365, 244)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
